--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.8.5",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "sails-mongo": "^0.12.2",
-    "waterline": "^0.11.9"
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0"
   }
 }
